<resources>
    <string name="app_name">PositionTracker</string>
    <string name="title_home">MAP</string>
    <string name="title_dashboard">STATS</string>
    <string name="title_notifications">SETTINGS</string>
    <string name="title_about">About</string>
    <string name="title_permission">Permission</string>
    <!-- SETTINGS FRAGMENT -->
    <string name="settings_tracking_heading">Tracking Settings</string>
    <string name="settings_testcon">Test Connection</string>
    <string name="settings_save">Save</string>
    <string name="settings_start_tracking">Start tracking automatically</string>
    <string name="settings_permission">Check Permission</string>
    <string name="settings_accuracy">Accuracy</string>
    <string name="settings_accuracy_1">only Wifi</string>
    <string name="settings_accuracy_2">Mobil / Wifi</string>
    <string name="settings_accuracy_3">GPS</string>
    <string name="settings_distance">Distance</string>
    <string name="settings_time">Time</string>
    <string name="settings_time_between">Time Between Points</string>
    <string name="settings_distance_points">Distance between Points in m</string>
    <string name="settings_minimum_distance">Minimum Distance (meter) between Points for start</string>
    <string name="settings_minimum_distance_time">Seconds between Points</string>
    <string name="settings_hostname">Hostname with http(s)</string>
    <string name="settings_port">Port</string>
    <string name="settings_api_key">API KEY</string>
    <string name="settings_serversettings">Serversettings</string>
    <!-- MAP FRAGMENT -->
    <string name="map_push_position">Push Current Position</string>
    <string name="map_push_position_all">Push Position</string>
    <string name="map_position_send_success">Position was send</string>
    <string name="map_position_cannot_locate">Cannot locate position</string>
    <string name="map_push_info">Data Information</string>
    <string name="map_next_push">Next push in</string>
    <string name="map_queue_length">Waitung queue lenght</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ABout Fragment-->
    <string name="about_project_link_text">View Project on GitHub</string>
    <string name="about_project_url">https://github.com/cheinisch/PositionTracker</string>

    <string name="licences_oss">Used Open Source Libraries</string>
    <string name="about_libs">Used Libraries</string>
    <string-array name="used_libraries">
        <item>AndroidX Core</item>
        <item>Material Components</item>
        <item>Open Street Maps</item>
        <item>Navigation Component</item>
        <item>Play Services Location</item>
    </string-array>
    <string name="title_wearmodul">PositionTracker</string>
</resources>