<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="de.heimfisch.positiontracker.ui.map.MapFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="de.heimfisch.positiontracker.ui.stats.StatsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="de.heimfisch.positiontracker.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_open_permissionFragment"
            app:destination="@id/navigation_permission" />
    </fragment>
    <fragment
        android:id="@+id/navigation_about"
        android:name="de.heimfisch.positiontracker.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/navigation_permission"
        android:name="de.heimfisch.positiontracker.ui.permission.PermissionFragment"
        android:label="@string/title_permission"
        tools:layout="@layout/fragment_permission" />
</navigation>